force-app/main/default/objects/ChatTemplate__c/ChatTemplate__c.object-meta.xml
<CustomObject>
    <label>ChatTemplate</label>
    <nameField>
        <displayFormat>TID-{000000}</displayFormat>
        <label>Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChatTemplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>