force-app/main/default/objects/ChatTemplate__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>ko_KR, en_US ...</description>
    <label>Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>