force-app/main/default/objects/ChatTemplate__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>KNOX, SLACK, MSN, KAKAO ...</description>
    <label>Platform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>