force-app/main/default/objects/ChatTemplate__c/fields/TemplateType__c.field-meta.xml
<CustomField>
    <fullName>TemplateType__c</fullName>
    <description>APPCARD, HTML, PLAINTEXT, ...</description>
    <label>TemplateType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>